# overkami

./: .gitignore  .prettierignore  .prettierrc  .prettierrc.toml  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  bun.lockb  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  ui.config.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
icons/: overkami_icon_raw.xcf
mock-env/: README.md
mock-env/config/: config.json
public/builtin-wallpapers/: picture.html
src/: App.css  App.svelte  App.tsx  GlobalState.tsx  binding.ts  index.tsx  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: icon.icns
src-tauri/src/: commands.rs  config.rs  event_manager.rs  lib.rs  main.rs  sys.rs  tray_icon.rs  utils.rs  wallpaper.rs  window.rs
src-tauri/src/commands/: config.rs  mod.rs  os.rs  sync.rs
src-tauri/src/data/: mod.rs  profile.rs
src-tauri/src/model/: config.rs  mod.rs  wallpaper.rs
src-tauri/src/os/: application_monitor.rs  application_observer.rs  mod.rs
src-tauri/src/os/platform_impl/: macos.rs  mod.rs  windows.rs
src-tauri/src/presentation/: mod.rs  window_manager.rs
src-tauri/src/service/: mod.rs
src-tauri/src/wallpaper/: application_observer.rs  instance.rs  manager.rs  mod.rs  overlay.rs  overlay_host.rs  overlay_manager.rs  wallpaper_host.rs
src/builtin-wallpapers/: picture.html  picture.ts  picture.tsx  video.tsx  youtube.tsx
src/components/: Config.tsx  Menu.tsx  Preference.tsx  TitleBar.tsx  ui.tsx
src/components/home-screen/: HomeScreen.tsx
src/components/home-view/: HomeView.tsx
src/components/ui/: button.tsx  dialog.tsx  separator.tsx
src/components/wallpaper/: YouTubeEmbed.tsx
src/components/wallpaper-screen/: WallpaperForm.tsx  WallpaperScreen.tsx
src/components/wallpaper-view/: ApplicationField.tsx  Field.tsx  FilterFields.tsx  NameField.tsx  OpacityField.tsx  SourceField.tsx  WallpaperField.tsx  WallpaperForm.tsx  WallpaperView.tsx
src/lib/: Greet.svelte  binding.ts  data.ts  index.ts  preference.tsx  utils.ts  view.ts
src/lib/binding/: command_config.ts  command_os.ts  command_wallpaper.ts  emit_wallpaper.ts  payload_common.ts  payload_config.ts  payload_event.ts  payload_os.ts  payload_wallpaper_event.ts  utils.ts
src/lib/components/: TitleBar.svelte
src/lib/components/ui/: MenuItem.svelte
src/lib/state/: index.ts  theme.ts
src/screen/: Profiles.tsx  index.tsx
src/screens/: Preference.tsx
src/ui/: Menu.tsx  styles.module.css
src/wallpaper/: App.tsx
