[package]
name = "overkami"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "overkami_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1.0.5"
percent-encoding = "2.3.1"
sysinfo = "0.35.2"
window-observer = { git = "https://github.com/tasuren/window-observer-rs.git" }
window-getter = { git = "https://github.com/tasuren/window-getter-rs.git" }
tauri-plugin-dialog = "2"
applications = "0.3.1"
anyhow = "1.0.98"
async-fs = "2.1.2"
