[package]
name = "overkami-backend"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license = "GPL-3.0-only"
publish = false
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "overkami_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1.0.5"
percent-encoding = "2.3.2"
sysinfo = "0.35.2"
window-observer = { version = "0.1.0", features = ["macos-private-api"] }
window-getter = "0.1.2"
tauri-plugin-dialog = "2"
applications = "0.3.1"
anyhow = "1.0.100"
async-fs = "2.2.0"
pollster = "0.4.0"
smallvec = "1.15.1"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.48.0", default-features = false, features = ["time"] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-os = "2"
log-panics = "2.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
version = "0.3.2"
default-features = false
features = ["CGError", "CGWindow"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3.2"
default-features = false
features = ["NSResponder", "NSWindow"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm"]
